--- a/index.html
+++ b/index.html
@@ -3,21 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta property="og:title" content="Ontology SmartX">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://smartx.ont.io">
+    <meta property="og:image" content="./static/img/smartx.png">
+    <meta property="og:description" content="A one-stop IDE that can be used to compile, deploy, and invoke Ontology smart contracts.">
 
     <title>Smartx</title>
 
     <link rel="shortcut icon" href="static/img/favicon.ico"/>
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113878921-4"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() { dataLayer.push(arguments); }
-      gtag('js', new Date());
-
-      gtag('config', 'UA-113878921-4');
-    </script>
-
 
     <!--ACE Editor -->
     <script type="text/javascript" src="https://ace.c9.io/build/src/ace.js"></script>
