update open graph image

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta property="og:title" content="Ontology SmartX">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://smartx.ont.io">
-    <meta property="og:image" content="./static/img/smartx.png">
+    <meta property="og:image" content="https://cdn.o3.network/img/neo/ONT.png">
     <meta property="og:description" content="A one-stop IDE that can be used to compile, deploy, and invoke Ontology smart contracts.">
 
     <title>Smartx</title>
